// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "lightgrey",
        "borderRadius": 5,
        "margin": 2,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    Did I render?
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontSize": 15,
        },
      ]
    }
  >
    It seems so:
  </Text>
  <View
    style={
      Object {
        "display": "flex",
        "textAlign": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "marginLeft": "10%",
          },
        ]
      }
    >
      I'm a bullet
    </Text>
    <Text
      style={
        Array [
          Object {
            "marginLeft": "10%",
          },
        ]
      }
    >
      Second Bullet
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "borderRadius": 5,
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 30,
            "textAlign": "center",
          },
        ]
      }
    >
      I'm ready to help!
    </Text>
  </View>
</View>
`;

exports[`renders whitout action 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "lightgrey",
        "borderRadius": 5,
        "margin": 2,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    test
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontSize": 15,
        },
      ]
    }
  >
    test
  </Text>
  <Text />
  <Text />
</View>
`;
